<resources>
    <string name="app_name">PADC-Implicit-Intnet</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_map">Map</string>
    <string name="lbl_phone_call">Phone Call</string>
    <string name="lbl_send_email">Send Email</string>
    <string name="lbl_take_picture">Take Picture</string>
    <string name="lbl_select_picture">Select Picture</string>
    <string name="lbl_save_event">Save Event</string>
</resources>
